--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,6 @@ block content
   h1 Welcome to the Shop!
   
   .container
-    img.image(src="https://cdn.shopify.com/s/files/1/1403/8979/t/1/assets/slide_1_1024x1024.jpg?v=10525153868611755069" class="imgH")
+    img.image(src="https://cdn.shopify.com/s/files/1/1403/8979/t/1/assets/slide_1_1024x1024.jpg?v=10525153868611755069" width="700px" class="imgH")
 
 
